<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Calendar</string>
	<string name="action_settings">Settings</string>
	<string name="tasks">Tasks</string>
	<string name="add_task">Add a task</string>
	<string name="task_description">Task description</string>
	<string name="remind">Remind</string>
	<string name="period">Period</string>
	<string name="task_reminder_enabled">Task reminder enabled</string>
	<string name="no_tasks">No tasks</string>

	<string-array name="period_units">
		<item>minutes</item>
		<item>hours</item>
		<item>days</item>
		<item>weeks</item>
		<item>months</item>
		<item>years</item>
	</string-array>

	<string-array name="every_period_unit">
		<item>every minute</item>
		<item>every hour</item>
		<item>every day</item>
		<item>every week</item>
		<item>every month</item>
		<item>every year</item>
	</string-array>

	<plurals name="every_n_minutes">
		<item quantity="one">every minute</item>
		<item quantity="other">every %d minutes</item>
	</plurals>

	<plurals name="every_n_hours">
		<item quantity="one">every hour</item>
		<item quantity="other">every %d hours</item>
	</plurals>

	<plurals name="every_n_days">
		<item quantity="one">every day</item>
		<item quantity="other">every %d days</item>
	</plurals>

	<plurals name="every_n_weeks">
		<item quantity="one">every week</item>
		<item quantity="other">every %d weeks</item>
	</plurals>

	<plurals name="every_n_months">
		<item quantity="one">every month</item>
		<item quantity="other">every %d months</item>
	</plurals>

	<plurals name="every_n_years">
		<item quantity="one">every year</item>
		<item quantity="other">every %d years</item>
	</plurals>


	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="confirm_delete">Delete task?</string>

	<string name="reminder_set_for">The reminder is set for %1$s</string>
	<string name="reminder">Reminder</string>
	<string name="complete">Complete</string>
	<string name="hide">Hide</string>

	<string name="january">January</string>
	<string name="february">February</string>
	<string name="march">March</string>
	<string name="april">April</string>
	<string name="may">May</string>
	<string name="june">June</string>
	<string name="july">July</string>
	<string name="august">August</string>
	<string name="september">September</string>
	<string name="october">October</string>
	<string name="november">November</string>
	<string name="december">December</string>

	<string name="weekday_mon">Mon</string>
	<string name="weekday_tue">Tue</string>
	<string name="weekday_wed">Wed</string>
	<string name="weekday_thu">Thu</string>
	<string name="weekday_fri">Fri</string>
	<string name="weekday_sat">Sat</string>
	<string name="weekday_sun">Sun</string>

	<string name="database_error_message">Error when making a database query</string>
</resources>