<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:padding="15dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<TextView
				android:id="@+id/calendarTitle"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="28sp"
				tools:text="2025 май"/>

		<androidx.viewpager2.widget.ViewPager2
				android:id="@+id/calendarPager"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"/>


		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="40dp"
				android:text="@string/tasks"
				android:textSize="20sp"/>


		<Button
				android:id="@+id/addTaskButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/task_margin"
				android:layout_marginBottom="@dimen/task_margin"
				android:text="@string/add_task"
				android:textSize="18sp"
				style="@style/Theme.CalendarApp.Button"/>


		<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/tasksContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

		<TextView
				android:id="@+id/noTasks"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:gravity="center"
				android:textStyle="italic"
				android:textSize="@dimen/text_bigger"
				android:text="@string/no_tasks"/>
	</LinearLayout>


	<LinearLayout
			android:id="@+id/overlay"
			android:visibility="gone"
			tools:visibility="visible"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/shading"/>

	<androidx.fragment.app.FragmentContainerView
			android:id="@+id/taskEditPanel"
			android:name="com.x590.calendar.ui.TaskEditPanelFragment"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"/>
</FrameLayout>